--- a/Dockerfile.buildbase
+++ b/Dockerfile.buildbase
@@ -163,20 +163,20 @@ RUN apt-get update && \
             libssl-dev \
             libtool \
             libboost-dev \
-            rapidjson-dev \
+            libcurl4-openssl-dev \
             libb64-dev \
             patchelf \
             python3-dev \
             python3-pip \
             python3-setuptools \
+            rapidjson-dev \
             software-properties-common \
-            libcurl4-openssl-dev \
+            wget \
             zlib1g-dev && \
     rm -rf /var/lib/apt/lists/*
 
-# Install dependencies for protobuf code generation in Python
 RUN pip3 install --upgrade wheel setuptools && \
-    pip3 install grpcio-tools
+    pip3 install grpcio-tools docker
 
 # Server build requires recent version of CMake (FetchContent required)
 RUN wget -O - https://apt.kitware.com/keys/kitware-archive-latest.asc 2>/dev/null | \
@@ -185,6 +185,10 @@ RUN wget -O - https://apt.kitware.com/keys/kitware-archive-latest.asc 2>/dev/nul
     apt-add-repository 'deb https://apt.kitware.com/ubuntu/ bionic main' && \
     apt-get update && \
     apt-get install -y --no-install-recommends cmake
+
+# BASE_IMAGE can be a tritonserver image so we must remove any
+# existing triton install before copying in the new components.
+RUN rm -fr /opt/*
 
 # Caffe2 libraries
 COPY --from=tritonserver_pytorch \
@@ -273,6 +277,7 @@ RUN cd /opt/tritonserver/backends/onnxruntime && \
 WORKDIR /workspace
 RUN rm -fr *
 COPY build.py build.py
+ENTRYPOINT []
 
 ENV TRITON_SERVER_VERSION ${TRITON_VERSION}
 ENV NVIDIA_TRITON_SERVER_VERSION ${TRITON_CONTAINER_VERSION}
